Add suggested signal names

--- a/site/routes_errors.templ
+++ b/site/routes_errors.templ
@@ -131,5 +131,5 @@ templ signalNames(signals ...string) {
 			prefixedNames[i] = "$" + s
 		}
 	}}
-	<code>{ strings.Join( prefixedNames, ", ") }</code>
+	<pre><code>{ strings.Join( prefixedNames, ", ") }</code></pre>
 }
