--- a/site/routes_errors_init.templ
+++ b/site/routes_errors_init.templ
@@ -23,11 +23,10 @@ templ MorphFailed(name string, info *InitErrorInfo) {
 templ NoFragmentsFound(name string, info *InitErrorInfo) {
 	@InitErrorView(name, info) {
 		<p>No fragments were found in the <code>datastar-merge-fragments</code> SSE event. At least one fragment to merge must be provided.</p>
-		@sampleCode("Example") {
-			{
-				`event: datastar-merge-fragments
-data: fragments <div id="swap"></div>`
-			}
+		@sampleHtmlCode("Example") {
+			event: datastar-merge-fragments
+			data: fragments
+			<div id="swap"></div>
 		}
 		@eventDocs("merge-fragments")
 	}
@@ -36,11 +35,9 @@ data: fragments <div id="swap"></div>`
 templ NoPathsProvided(name string, info *InitErrorInfo) {
 	@InitErrorView(name, info) {
 		<p>No paths were provided to the <code>datastar-remove-signals</code> SSE event. At least one path must be provided.</p>
-		@sampleCode("Example") {
-			{
-				`event: datastar-remove-signals
-data: paths foo.bar abc`
-			}
+		@sampleHtmlCode("Example") {
+			event: datastar-remove-signals
+			data: paths foo.bar abc
 		}
 		@eventDocs("remove-signals")
 	}
@@ -49,11 +46,9 @@ data: paths foo.bar abc`
 templ NoScriptProvided(name string, info *InitErrorInfo) {
 	@InitErrorView(name, info) {
 		<p>No script was provided to the <code>datastar-execute-script</code> SSE event. A script to execute must be provided.</p>
-		@sampleCode("Example") {
-			{
-				`event: datastar-execute-script
-data: script console.log('Hello, world!')`
-			}
+		@sampleHtmlCode("Example") {
+			event: datastar-execute-script
+			data: script console.log('Hello, world!')
 		}
 		@eventDocs("execute-scripts")
 	}
@@ -62,11 +57,9 @@ data: script console.log('Hello, world!')`
 templ NoSelectorProvided(name string, info *InitErrorInfo) {
 	@InitErrorView(name, info) {
 		<p>No selector was provided to the <code>datastar-remove-fragments</code> SSE event. A selector must be provided.</p>
-		@sampleCode("Example") {
-			{
-				`event: datastar-remove-fragments
-data: selector #foo`
-			}
+		@sampleHtmlCode("Example") {
+			event: datastar-remove-fragments
+			data: selector #foo
 		}
 		@eventDocs("remove-fragments")
 	}
@@ -75,18 +68,16 @@ data: selector #foo`
 templ NoTargetsFound(name string, info *InitErrorInfo) {
 	@InitErrorView(name, info) {
 		<p>No targets were found for a fragment with the selector or ID <code>{ info.SelectorOrID }</code> in the <code>datastar-merge-fragments</code> SSE event . Each fragment must target an element that already exists in the DOM, via a selector or ID.</p>
-		@sampleCode("Example using an ID") {
-			{
-				`event: datastar-merge-fragments
-data: fragments <div id="foo"></div>`
-			}
+		@sampleHtmlCode("Example using an ID") {
+			event: datastar-merge-fragments
+			data: fragments 
+			<div id="foo"></div>
 		}
-		@sampleCode("Example using a selector") {
-			{
-				`event: datastar-merge-fragments
-data: selector #foo
-data: fragments <div></div>`
-			}
+		@sampleHtmlCode("Example using a selector") {
+			event: datastar-merge-fragments
+			data: selector #foo
+			data: fragments 
+			<div></div>
 		}
 		@eventDocs("merge-fragments")
 	}
