--- a/site/routes_errors_runtime.templ
+++ b/site/routes_errors_runtime.templ
@@ -28,6 +28,7 @@ templ BindUnsupportedSignalType(name string, info *RuntimeErrorInfo) {
 		@attributeDocs("bind")
 	}
 }
+
 templ ClassValueRequired(name string, info *RuntimeErrorInfo) {
 	@RuntimeErrorView(name, info) {
 		@valueRequired("class")
@@ -101,13 +102,11 @@ templ ExecuteExpression(name string, info *RuntimeErrorInfo) {
 				</div>
 			}
 			<p>In the following example, <code>$foo</code> is <em>not</em> a valid signal, since only the leaf nodes in nested signals are actually signals.</p>
-			@code() {
-				{
-					`<div data-signals="{foo: {bar: 1, baz: 2}}">
+			@code(`text/html`, `
+<div data-signals="{foo: {bar: 1, baz: 2}}">
 	<div data-text="$foo.woof"></div>
-</div>`
-				}
-			}
+</div>
+	`)
 			<p>See the docs on <a href="/guide/datastar_expressions">DataStar expressions</a> for more information.</p>
 		}
 	}
@@ -140,7 +139,7 @@ templ InvalidFileResultType(name string, info *RuntimeErrorInfo) {
 templ ScrollIntoViewInvalidElement(name string, info *RuntimeErrorInfo) {
 	@RuntimeErrorView(name, info) {
 		<p>The <code>data-scroll-into-view</code> attribute was placed on an invalid element. It may only be placed on an HTML element.</p>
-		@sampleCode("Example") {
+		@sampleHtmlCode("Example") {
 			<div data-scroll-into-view></div>
 		}
 		@attributeDocs("scroll-into-view")
@@ -150,12 +149,12 @@ templ ScrollIntoViewInvalidElement(name string, info *RuntimeErrorInfo) {
 templ SSEClosestFormNotFound(name string, info *RuntimeErrorInfo) {
 	@RuntimeErrorView(name, info) {
 		<p>No closest form could be found in the DOM. When setting the <code>contentType</code> option to <code>form</code> in the <code>\@{ info.Plugin.Name }()</code> action, the element must have a wrapping form, otherwise a <code>selector</code> must be provided to a form that exists in the DOM.</p>
-		@sampleCode("Example using a wrapping form") {
+		@sampleHtmlCode("Example using a wrapping form") {
 			<form>
 				<button data-on-click="@{ action }('/endpoint', {contentType: 'form'})"></button>
 			</form>
 		}
-		@sampleCode("Example using a selector") {
+		@sampleHtmlCode("Example using a selector") {
 			<button data-on-click="@{ action }('/endpoint', {contentType: 'form', selector: '#myform'})"></button>
 		}
 		@actionDocs("get")
@@ -165,16 +164,14 @@ templ SSEClosestFormNotFound(name string, info *RuntimeErrorInfo) {
 templ SSEFetchFailed(name string, info *RuntimeErrorInfo) {
 	@RuntimeErrorView(name, info) {
 		<p>The following error was encountered when sending a <code>{ info.Method }</code> request to <code>{ info.URL }</code>.</p>
-		@code() {
-			{ info.Error }
-		}
+		@code(`text`, info.Error)
 	}
 }
 
 templ SSEFormNotFound(name string, info *RuntimeErrorInfo) {
 	@RuntimeErrorView(name, info) {
 		<p>No form with the selector <code>{ info.Selector }</code> could be found in the DOM. When specifying a form selector using the <code>selector</code> option in the <code>\@{ info.Plugin.Name }()</code> action, the form must already exist in the DOM.</p>
-		@sampleCode("Example") {
+		@sampleHtmlCode("Example") {
 			<button data-on-click="@{ action }('/endpoint', {contentType: 'form', selector: '#myform'})"></button>
 		}
 		@actionDocs("get")
@@ -184,7 +181,7 @@ templ SSEFormNotFound(name string, info *RuntimeErrorInfo) {
 templ SSEInvalidContentType(name string, info *RuntimeErrorInfo) {
 	@RuntimeErrorView(name, info) {
 		<p>An invalid content type <code>{ info.ContentType }</code> was provided to the <code>\@{ info.Plugin.Name }()</code> action. The content type must be either <code>json</code> (the default) or <code>form</code>.</p>
-		@sampleCode("Example") {
+		@sampleHtmlCode("Example") {
 			<button data-on-click="@{ action }('/endpoint', {contentType: 'form'})"></button>
 		}
 		@actionDocs("get")
@@ -194,7 +191,7 @@ templ SSEInvalidContentType(name string, info *RuntimeErrorInfo) {
 templ SSENoURLProvided(name string, info *RuntimeErrorInfo) {
 	@RuntimeErrorView(name, info) {
 		<p>No URL was provided to the <code>\@{ info.Plugin.Name }()</code> action. A valid URL must be provided as the first argument.</p>
-		@sampleCode("Example") {
+		@sampleHtmlCode("Example") {
 			<button data-on-click="@{ action }('/endpoint')"></button>
 		}
 		@actionDocs("get")
@@ -204,7 +201,7 @@ templ SSENoURLProvided(name string, info *RuntimeErrorInfo) {
 templ TextInvalidElement(name string, info *RuntimeErrorInfo) {
 	@RuntimeErrorView(name, info) {
 		<p>The <code>data-text</code> attribute was placed on an invalid element. It may only be placed on an HTML element.</p>
-		@sampleCode("Example") {
+		@sampleHtmlCode("Example") {
 			<div data-text="$foo"></div>
 		}
 		@attributeDocs("text")
@@ -213,10 +210,10 @@ templ TextInvalidElement(name string, info *RuntimeErrorInfo) {
 
 templ attrError() {
 	<p>The <code>data-attr</code> attribute <em>must</em> have a value, representing either an expression (if a key is provided), or an object of key-value pairs, where the keys are attribute names and the values are expressions.</p>
-	@sampleCode("Example") {
+	@sampleHtmlCode("Example") {
 		<div data-attr-disabled="$foo"></div>
 	}
-	@sampleCode("Alternative syntax") {
+	@sampleHtmlCode("Alternative syntax") {
 		<div data-attr="{disabled: foo}"></div>
 	}
 	@attributeDocs("attr")
@@ -224,21 +221,21 @@ templ attrError() {
 
 templ bindError() {
 	<p>The <code>data-bind</code> attribute must have either a key <em>or</em> a value, representing the signal name to create and enable two-way binding with the element’s value.</p>
-	@sampleCode("Example") {
-		<input data-bind-signalname />
+	@sampleHtmlCode("Example") {
+		<input data-bind-signalname/>
 	}
-	@sampleCode("Alternative syntax") {
-		<input data-bind="signalname" />
+	@sampleHtmlCode("Alternative syntax") {
+		<input data-bind="signalname"/>
 	}
 	@attributeDocs("bind")
 }
 
 templ classError() {
 	<p>The <code>data-class</code> attribute <em>must</em> have a value, representing either an expression (if a key is provided), or an object of key-value pairs, where the keys are class names and the values are expressions.</p>
-	@sampleCode("Example") {
+	@sampleHtmlCode("Example") {
 		<div data-class-hidden="$foo"></div>
 	}
-	@sampleCode("Alternative syntax") {
+	@sampleHtmlCode("Alternative syntax") {
 		<div data-class="{hidden: foo}"></div>
 	}
 	@attributeDocs("attr")
@@ -246,17 +243,17 @@ templ classError() {
 
 templ computedError() {
 	<p>The <code>data-computed</code> attribute <em>must</em> have both a key, representing the signal name to create, and a value, representing the expression to assign to the signal.</p>
-	@sampleCode("Example") {
+	@sampleHtmlCode("Example") {
 		<div data-computed-blinker="count % 2 === 0"></div>
 	}
 	@attributeDocs("computed")
 }
 
 templ customValidityError() {
-	@sampleCode("Example") {
+	@sampleHtmlCode("Example") {
 		<form>
-			<input data-bind-foo data-custom-validity="$foo === $bar ? '' : 'Field values must be the same.'" name="foo" />
-			<input data-bind-bar name="bar" />
+			<input data-bind-foo data-custom-validity="$foo === $bar ? '' : 'Field values must be the same.'" name="foo"/>
+			<input data-bind-bar name="bar"/>
 			<button>
 				Submit form
 			</button>
