--- a/site/routes_errors_init.templ
+++ b/site/routes_errors_init.templ
@@ -23,11 +23,11 @@ templ MorphFailed(name string, info *InitErrorInfo) {
 templ NoFragmentsFound(name string, info *InitErrorInfo) {
 	@InitErrorView(name, info) {
 		<p>No fragments were found in the <code>datastar-merge-fragments</code> SSE event. At least one fragment to merge must be provided.</p>
-		@sampleHtmlCode("Example") {
-			event: datastar-merge-fragments
-			data: fragments
-			<div id="swap"></div>
-		}
+		@sampleCode("Example", "html", `
+event: datastar-merge-fragments
+data: fragments
+<div id="swap"></div>
+		`)
 		@eventDocs("merge-fragments")
 	}
 }
@@ -35,10 +35,10 @@ templ NoFragmentsFound(name string, info *InitErrorInfo) {
 templ NoPathsProvided(name string, info *InitErrorInfo) {
 	@InitErrorView(name, info) {
 		<p>No paths were provided to the <code>datastar-remove-signals</code> SSE event. At least one path must be provided.</p>
-		@sampleHtmlCode("Example") {
-			event: datastar-remove-signals
-			data: paths foo.bar abc
-		}
+		@sampleCode("Example", "html", `
+event: datastar-remove-signals
+data: paths foo.bar abc
+		`)
 		@eventDocs("remove-signals")
 	}
 }
@@ -46,10 +46,10 @@ templ NoPathsProvided(name string, info *InitErrorInfo) {
 templ NoScriptProvided(name string, info *InitErrorInfo) {
 	@InitErrorView(name, info) {
 		<p>No script was provided to the <code>datastar-execute-script</code> SSE event. A script to execute must be provided.</p>
-		@sampleHtmlCode("Example") {
-			event: datastar-execute-script
-			data: script console.log('Hello, world!')
-		}
+		@sampleCode("Example", "html", `
+event: datastar-execute-script
+data: script console.log('Hello, world!')
+		`)
 		@eventDocs("execute-scripts")
 	}
 }
@@ -57,10 +57,10 @@ templ NoScriptProvided(name string, info *InitErrorInfo) {
 templ NoSelectorProvided(name string, info *InitErrorInfo) {
 	@InitErrorView(name, info) {
 		<p>No selector was provided to the <code>datastar-remove-fragments</code> SSE event. A selector must be provided.</p>
-		@sampleHtmlCode("Example") {
-			event: datastar-remove-fragments
-			data: selector #foo
-		}
+		@sampleCode("Example", "html", `
+event: datastar-remove-fragments
+data: selector #foo
+		`)
 		@eventDocs("remove-fragments")
 	}
 }
@@ -68,17 +68,17 @@ templ NoSelectorProvided(name string, info *InitErrorInfo) {
 templ NoTargetsFound(name string, info *InitErrorInfo) {
 	@InitErrorView(name, info) {
 		<p>No targets were found for a fragment with the selector or ID <code>{ info.SelectorOrID }</code> in the <code>datastar-merge-fragments</code> SSE event . Each fragment must target an element that already exists in the DOM, via a selector or ID.</p>
-		@sampleHtmlCode("Example using an ID") {
-			event: datastar-merge-fragments
-			data: fragments 
-			<div id="foo"></div>
-		}
-		@sampleHtmlCode("Example using a selector") {
-			event: datastar-merge-fragments
-			data: selector #foo
-			data: fragments 
-			<div></div>
-		}
+		@sampleCode("Example using an ID", "html", `
+event: datastar-merge-fragments
+data: fragments
+<div id="foo"></div>
+		`)
+		@sampleCode("Example using a selector", "html", `
+event: datastar-merge-fragments
+data: selector #foo
+data: fragments
+<div></div>
+		`)
 		@eventDocs("merge-fragments")
 	}
 }
